--- a/test/newscrawler guide.ipynb
+++ b/test/newscrawler guide.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -340,8 +340,184 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33.87% (47.77 seconds): Crawling... afr                 "
+      "50.00% (76.87 seconds): Crawling... japan-news          "
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some characters could not be decoded, and were replaced with REPLACEMENT CHARACTER.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.00% (625.36 seconds): Crawling... yahoo               \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">collect</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">crawl</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>collected</th>\n",
+       "      <th>collected_unique</th>\n",
+       "      <th>selected</th>\n",
+       "      <th>downloaded</th>\n",
+       "      <th>trashed</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>all</td>\n",
+       "      <td>25869</td>\n",
+       "      <td>25802</td>\n",
+       "      <td>1330</td>\n",
+       "      <td>773</td>\n",
+       "      <td>557</td>\n",
+       "      <td>1330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>reuters</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>173</td>\n",
+       "      <td>79</td>\n",
+       "      <td>94</td>\n",
+       "      <td>173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>investing.com</td>\n",
+       "      <td>940</td>\n",
+       "      <td>940</td>\n",
+       "      <td>107</td>\n",
+       "      <td>42</td>\n",
+       "      <td>65</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>euronews</td>\n",
+       "      <td>967</td>\n",
+       "      <td>967</td>\n",
+       "      <td>101</td>\n",
+       "      <td>6</td>\n",
+       "      <td>95</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>dailymail</td>\n",
+       "      <td>2751</td>\n",
+       "      <td>2751</td>\n",
+       "      <td>90</td>\n",
+       "      <td>72</td>\n",
+       "      <td>18</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>nextbigfuture</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>thinkprogress</td>\n",
+       "      <td>82</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>realclearpolitics</td>\n",
+       "      <td>307</td>\n",
+       "      <td>284</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>heritage</td>\n",
+       "      <td>287</td>\n",
+       "      <td>287</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>townhall</td>\n",
+       "      <td>314</td>\n",
+       "      <td>313</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    collect                                crawl              \n",
+       "                  collected collected_unique selected downloaded trashed total\n",
+       "all                   25869            25802     1330        773     557  1330\n",
+       "reuters                1080             1080      173         79      94   173\n",
+       "investing.com           940              940      107         42      65   107\n",
+       "euronews                967              967      101          6      95   101\n",
+       "dailymail              2751             2751       90         72      18    90\n",
+       "...                     ...              ...      ...        ...     ...   ...\n",
+       "nextbigfuture            35               35        0          0       0     0\n",
+       "thinkprogress            82               82        0          0       0     0\n",
+       "realclearpolitics       307              284        0          0       0     0\n",
+       "heritage                287              287        0          0       0     0\n",
+       "townhall                314              313        0          0       0     0\n",
+       "\n",
+       "[74 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -357,9 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recording to bigquery storage... done (17.24 seconds)\n"
+     ]
+    }
+   ],
    "source": [
     "crawler.record()"
    ]
@@ -373,9 +557,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "202\n"
+     ]
+    }
+   ],
    "source": [
     "crawler.report(using='sendgrid')"
    ]
