--- a/test/newscrawler guide.ipynb
+++ b/test/newscrawler guide.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
@@ -38,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "checking bigquery storage... done (23.43 seconds)\n",
-      "we have total 425129 articles (360885 downloaded, 64244 trashed)\n"
+      "checking bigquery storage... done (33.19 seconds)\n",
+      "we have total 532908 articles (423056 downloaded, 109852 trashed)\n"
      ]
     }
    ],
    "source": [
-    "crawler = NewsCrawler(storage='bigquery')"
+    "crawler = NewsCrawler('politico','realclearpolitics','arynews','breitbart','metro','msnbc','nationalreview', storage='bigquery')"
    ]
   },
   {
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -72,9 +63,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100.00% (103.79 seconds): Collecting URLs... yahoo               \n",
+      "100.00% (28.37 seconds): Collecting URLs... yahoo               \n",
       "\n",
-      "100.00% (0.11 seconds): Selecting URLs... cryptonews          "
+      "100.00% (0.02 seconds): Selecting URLs... dailybeast          "
      ]
     },
     {
@@ -106,90 +97,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>all</td>\n",
-       "      <td>25975</td>\n",
-       "      <td>25906</td>\n",
-       "      <td>1004</td>\n",
+       "      <td>2223</td>\n",
+       "      <td>2223</td>\n",
+       "      <td>859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>reuters</td>\n",
-       "      <td>1094</td>\n",
-       "      <td>1094</td>\n",
-       "      <td>166</td>\n",
+       "      <td>yahoo</td>\n",
+       "      <td>360</td>\n",
+       "      <td>360</td>\n",
+       "      <td>262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>investing.com</td>\n",
-       "      <td>931</td>\n",
-       "      <td>931</td>\n",
-       "      <td>108</td>\n",
+       "      <td>independent</td>\n",
+       "      <td>720</td>\n",
+       "      <td>720</td>\n",
+       "      <td>195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>euronews</td>\n",
-       "      <td>1063</td>\n",
-       "      <td>1063</td>\n",
-       "      <td>102</td>\n",
+       "      <td>cbc</td>\n",
+       "      <td>307</td>\n",
+       "      <td>307</td>\n",
+       "      <td>109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>dailymail</td>\n",
-       "      <td>2885</td>\n",
-       "      <td>2885</td>\n",
+       "      <td>zdnet</td>\n",
+       "      <td>339</td>\n",
+       "      <td>339</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>nymag</td>\n",
+       "      <td>227</td>\n",
+       "      <td>227</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>thestreet</td>\n",
+       "      <td>136</td>\n",
+       "      <td>136</td>\n",
        "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <td>dailybeast</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>nextbigfuture</td>\n",
-       "      <td>36</td>\n",
-       "      <td>36</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>axios</td>\n",
-       "      <td>132</td>\n",
-       "      <td>129</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>vice</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>msnbc</td>\n",
-       "      <td>136</td>\n",
-       "      <td>101</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>arstechnica</td>\n",
-       "      <td>208</td>\n",
-       "      <td>208</td>\n",
+       "      <td>thinkprogress</td>\n",
+       "      <td>82</td>\n",
+       "      <td>82</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>74 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "               collected  collected_unique  selected\n",
-       "all                25975             25906      1004\n",
-       "reuters             1094              1094       166\n",
-       "investing.com        931               931       108\n",
-       "euronews            1063              1063       102\n",
-       "dailymail           2885              2885        69\n",
-       "...                  ...               ...       ...\n",
-       "nextbigfuture         36                36         0\n",
-       "axios                132               129         0\n",
-       "vice                 102               102         0\n",
-       "msnbc                136               101         0\n",
-       "arstechnica          208               208         0\n",
-       "\n",
-       "[74 rows x 3 columns]"
+       "all                 2223              2223       859\n",
+       "yahoo                360               360       262\n",
+       "independent          720               720       195\n",
+       "cbc                  307               307       109\n",
+       "zdnet                339               339        94\n",
+       "nymag                227               227        81\n",
+       "thestreet            136               136        69\n",
+       "dailybeast            52                52        49\n",
+       "thinkprogress         82                82         0"
       ]
      },
      "metadata": {},
@@ -197,130 +171,8 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>url</th>\n",
-       "      <th>pubs</th>\n",
-       "      <th>actual_pub</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>https://cnn.com/2019/10/30/business/grocery-de...</td>\n",
-       "      <td>cnn, axios</td>\n",
-       "      <td>cnn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>https://politico.com/magazine/story/2019/11/05...</td>\n",
-       "      <td>politico, realclearpolitics</td>\n",
-       "      <td>politico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>https://politico.com/magazine/story/2019/10/30...</td>\n",
-       "      <td>politico, realclearpolitics</td>\n",
-       "      <td>politico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>https://politico.com/news/2019/11/06/joe-biden...</td>\n",
-       "      <td>politico, realclearpolitics</td>\n",
-       "      <td>politico</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>https://time.com/5720747/jon-meacham-trump-imp...</td>\n",
-       "      <td>time, realclearpolitics</td>\n",
-       "      <td>time</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>64</td>\n",
-       "      <td>https://nbcnews.com/politics/trump-impeachment...</td>\n",
-       "      <td>msnbc, nbcnews</td>\n",
-       "      <td>nbcnews</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>65</td>\n",
-       "      <td>https://nbcnews.com/think/why-is-this-happenin...</td>\n",
-       "      <td>msnbc, nbcnews</td>\n",
-       "      <td>nbcnews</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>66</td>\n",
-       "      <td>https://nbcnews.com/politics/donald-trump/inte...</td>\n",
-       "      <td>msnbc, nbcnews</td>\n",
-       "      <td>nbcnews</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>67</td>\n",
-       "      <td>https://nbcnews.com/politics/2020-election/rep...</td>\n",
-       "      <td>msnbc, nbcnews</td>\n",
-       "      <td>nbcnews</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>68</td>\n",
-       "      <td>https://msnbc.com/craig-melvin/watch/pence-fil...</td>\n",
-       "      <td>msnbc, nbcnews</td>\n",
-       "      <td>msnbc</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>69 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                  url  \\\n",
-       "0   https://cnn.com/2019/10/30/business/grocery-de...   \n",
-       "1   https://politico.com/magazine/story/2019/11/05...   \n",
-       "2   https://politico.com/magazine/story/2019/10/30...   \n",
-       "3   https://politico.com/news/2019/11/06/joe-biden...   \n",
-       "4   https://time.com/5720747/jon-meacham-trump-imp...   \n",
-       "..                                                ...   \n",
-       "64  https://nbcnews.com/politics/trump-impeachment...   \n",
-       "65  https://nbcnews.com/think/why-is-this-happenin...   \n",
-       "66  https://nbcnews.com/politics/donald-trump/inte...   \n",
-       "67  https://nbcnews.com/politics/2020-election/rep...   \n",
-       "68  https://msnbc.com/craig-melvin/watch/pence-fil...   \n",
-       "\n",
-       "                           pubs actual_pub  \n",
-       "0                    cnn, axios        cnn  \n",
-       "1   politico, realclearpolitics   politico  \n",
-       "2   politico, realclearpolitics   politico  \n",
-       "3   politico, realclearpolitics   politico  \n",
-       "4       time, realclearpolitics       time  \n",
-       "..                          ...        ...  \n",
-       "64               msnbc, nbcnews    nbcnews  \n",
-       "65               msnbc, nbcnews    nbcnews  \n",
-       "66               msnbc, nbcnews    nbcnews  \n",
-       "67               msnbc, nbcnews    nbcnews  \n",
-       "68               msnbc, nbcnews      msnbc  \n",
-       "\n",
-       "[69 rows x 3 columns]"
+       "None"
       ]
      },
      "metadata": {},
@@ -340,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -349,170 +201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100.00% (356.05 seconds): Crawling... euronews            \n",
-      "\n"
+      "85.71% (1078.21 seconds): Crawling... yahoo               "
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"3\" halign=\"left\">collect</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">crawl</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>collected</th>\n",
-       "      <th>collected_unique</th>\n",
-       "      <th>selected</th>\n",
-       "      <th>downloaded</th>\n",
-       "      <th>trashed</th>\n",
-       "      <th>total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>all</td>\n",
-       "      <td>25975</td>\n",
-       "      <td>25906</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>510</td>\n",
-       "      <td>494</td>\n",
-       "      <td>1004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>reuters</td>\n",
-       "      <td>1094</td>\n",
-       "      <td>1094</td>\n",
-       "      <td>166</td>\n",
-       "      <td>64</td>\n",
-       "      <td>102</td>\n",
-       "      <td>166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>investing.com</td>\n",
-       "      <td>931</td>\n",
-       "      <td>931</td>\n",
-       "      <td>108</td>\n",
-       "      <td>33</td>\n",
-       "      <td>75</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>euronews</td>\n",
-       "      <td>1063</td>\n",
-       "      <td>1063</td>\n",
-       "      <td>102</td>\n",
-       "      <td>5</td>\n",
-       "      <td>97</td>\n",
-       "      <td>102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>dailymail</td>\n",
-       "      <td>2885</td>\n",
-       "      <td>2885</td>\n",
-       "      <td>69</td>\n",
-       "      <td>65</td>\n",
-       "      <td>4</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>nextbigfuture</td>\n",
-       "      <td>36</td>\n",
-       "      <td>36</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>axios</td>\n",
-       "      <td>132</td>\n",
-       "      <td>129</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>vice</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>msnbc</td>\n",
-       "      <td>136</td>\n",
-       "      <td>101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>arstechnica</td>\n",
-       "      <td>208</td>\n",
-       "      <td>208</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>74 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                collect                                crawl              \n",
-       "              collected collected_unique selected downloaded trashed total\n",
-       "all               25975            25906     1004        510     494  1004\n",
-       "reuters            1094             1094      166         64     102   166\n",
-       "investing.com       931              931      108         33      75   108\n",
-       "euronews           1063             1063      102          5      97   102\n",
-       "dailymail          2885             2885       69         65       4    69\n",
-       "...                 ...              ...      ...        ...     ...   ...\n",
-       "nextbigfuture        36               36        0          0       0     0\n",
-       "axios               132              129        0          0       0     0\n",
-       "vice                102              102        0          0       0     0\n",
-       "msnbc               136              101        0          0       0     0\n",
-       "arstechnica         208              208        0          0       0     0\n",
-       "\n",
-       "[74 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -528,17 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recording to bigquery storage... done (17.81 seconds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "crawler.record()"
    ]
@@ -552,17 +234,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "202\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "crawler.report(using='sendgrid')"
    ]
